; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_llist.c_Curl_llist_init.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_llist.c_Curl_llist_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.curl_llist = type { i32*, i32*, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_llist_init(%struct.curl_llist* %0, i32 %1) #0 {
  %3 = alloca %struct.curl_llist*, align 8
  %4 = alloca i32, align 4
  store %struct.curl_llist* %0, %struct.curl_llist** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %6 = getelementptr inbounds %struct.curl_llist, %struct.curl_llist* %5, i32 0, i32 3
  store i64 0, i64* %6, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %9 = getelementptr inbounds %struct.curl_llist, %struct.curl_llist* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %11 = getelementptr inbounds %struct.curl_llist, %struct.curl_llist* %10, i32 0, i32 1
  store i32* null, i32** %11, align 8
  %12 = load %struct.curl_llist*, %struct.curl_llist** %3, align 8
  %13 = getelementptr inbounds %struct.curl_llist, %struct.curl_llist* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
